# okodb

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: README.md  ci.yml
examples/: README.md  hello_okodb.py
okodb/errors/: cmake-iconv-missing.json  cmake-liblzma-missing.json
okodb/fixes/: disable-iconv.json  disable-liblzma.json
okodb/repositories/: libxml2.json
okodb/schemas/: error.schema.json  fix.schema.json  repository.schema.json  sdk.schema.json
okodb/sdks/: wrsdk-vxworks7-qemu-1.14.json  wrsdk-vxworks7-raspberrypi4b-1.6.json
scripts/: createdb.py  validate_errors.py  validate_fixes.py  validate_repositories.py  validate_sdks.py
