[metadata]
name = okodb
version = 0.1.0
description = OkodB JSON database tools
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/razr/okodb
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    jsonschema
python_requires = >=3.8
include_package_data = true

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    okodb-create = scripts.createdb:main
    okodb-validate-repositories = scripts.validate_repositories:main
    okodb-validate-errors = scripts.validate_errors:main
